--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,6 +24,11 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+main{
+  /* border:1px solid red; */
+  padding: 20px 20px 0 20px;
+}
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -33,6 +38,10 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+ul{
+  list-style: none;
 }
 
 @media (prefers-color-scheme: dark) {
