charts filter modes implemented

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,6 +27,9 @@ body {
 main{
   /* border:1px solid red; */
   padding: 20px 20px 0 20px;
+  display: flex;
+  flex-direction: column;
+gap: 24px
 }
 
 * {
