--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,18 +24,17 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-main{
-  /* border:1px solid red; */
-  padding: 20px 20px 0 20px;
-  display: flex;
-  flex-direction: column;
-gap: 24px
-}
-
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+}
+
+main {
+  padding: 20px 20px 0 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
 }
 
 a {
@@ -43,7 +42,7 @@ a {
   text-decoration: none;
 }
 
-ul{
+ul {
   list-style: none;
 }
 
