--- a/src/components/Chart.module.css
+++ b/src/components/Chart.module.css
@@ -1,10 +1,12 @@
 .nav {
   display: flex;
   gap: 6px;
+  margin-left: 20px;
 }
 .nav div {
   opacity: 0.8;
   padding: 4px 8px;
+  border-radius: 8px 8px 0 0;
 }
 .nav div.active {
   opacity: 1;
@@ -20,13 +22,27 @@
   /* height: 300px; */
   width: 100%;
   background-color: #191919;
-  padding: 20px 0;
+  padding: 20px 0 0 0;
+}
+.y_axis_candle_container {
+  display: grid;
+  grid-template-columns: 20px 1fr;
 }
 
-.graph ul {
+.y_axis {
   display: flex;
-  /* flex-wrap: wrap; */
+  flex-direction: column;
+  justify-content: space-between;
+  width: 20px;
+  border: 1px solid gray;
+}
+.y_axis li {
+  border-bottom: 1px dotted grey;
+  align-self: center;
+}
+
+.data_series {
+  display: flex;
   align-items: flex-end;
   justify-content: space-between;
-  margin: 0;
 }
