--- a/src/components/Chart.module.css
+++ b/src/components/Chart.module.css
@@ -24,21 +24,42 @@
   background-color: #191919;
   padding: 20px 0 0 0;
 }
-.y_axis_candle_container {
+.y_axis_and_candle_container {
   display: grid;
-  grid-template-columns: 20px 1fr;
+  grid-template-columns: 0 1fr;
+  padding: 0;
 }
 
 .y_axis {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: 20px;
-  border: 1px solid gray;
+  /* width: 20px; */
+  /* border: 1px solid gray; */
+  position: relative;
 }
 .y_axis li {
-  border-bottom: 1px dotted grey;
+  border-bottom: 1px dotted #2f2f2f;
   align-self: center;
+  width: 100%;
+}
+.y_axis li p {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  width:18px;
+  position: relative;
+  height: 0;
+  top:-6px;
+  left: -18px;
+  margin: 0;
+  font-size: 10px;
+  color: gray;
+  padding-right: 6px;
+}
+
+.y_axis li:last-child {
+  border: none;
 }
 
 .data_series {
