reusable chart, odometer component

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,7 +5,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #101010;
     --foreground: #ededed;
   }
 }
@@ -13,6 +13,7 @@
 html,
 body {
   max-width: 100vw;
+  font-size: 14px;
 }
 
 body {
@@ -30,10 +31,10 @@ body {
 }
 
 main {
-  padding: 20px 0px 0 40px;
+  padding: 20px;
   display: flex;
   flex-direction: column;
-  gap: 24px;
+  gap: 40px;
 }
 
 a {
@@ -49,4 +50,24 @@ ul {
   html {
     color-scheme: dark;
   }
+}
+
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: var(--foreground);
+}
+
+h1 {
+  font-size: 1.4em;
+  font-weight: 500;
+}
+h2 {
+  font-size: 1.2em;
+  opacity: 0.7;
+  font-weight: 300;
 }
