--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,9 @@ html,
 body {
   max-width: 100vw;
   font-size: 14px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 body {
@@ -31,10 +34,17 @@ body {
 }
 
 main {
+  max-width: 1200px;
+  /* margin: 0 auto; */
   padding: 20px;
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 40px;
+}
+
+@media (max-width: 1200px){
+  main{max-width: 100%;}
 }
 
 a {
