--- a/src/components/Odometer.module.css
+++ b/src/components/Odometer.module.css
@@ -1,5 +1,6 @@
 .odometer {
   width: 200px;
+  min-width: 200px;
   height: 200px;
   border-radius: 50%;
   /* border: 5px solid #ffb300; */
@@ -87,10 +88,19 @@
 .value_container {
   position: absolute;
 
-  top: 75%;
+  top: 100px;
+  height: 100px;
+  width: 100px;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
+}
+.value_container p.name {
+  text-align: center;
+  margin: 0;
+  padding-bottom: 8px;
+  font-size: 10px;
 }
 .value {
   font-weight: 700;
