--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,14 +12,11 @@
 
 html,
 body {
-  max-width: 100vw;
-  font-size: 14px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  width:100vw;
 }
 
 body {
+  font-size: 14px;
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
@@ -34,8 +31,9 @@ body {
 }
 
 main {
+  width:100%;
+  margin: 0 auto;
   max-width: 1200px;
-  /* margin: 0 auto; */
   padding: 20px;
   display: flex;
   flex-direction: column;
