--- a/src/components/ChartTypeBar.module.css
+++ b/src/components/ChartTypeBar.module.css
@@ -1,5 +1,5 @@
 .chartTypeBarContainer {
-  width:100%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -13,16 +13,16 @@
 }
 
 .chart {
-  /* position: relative; */
   display: flex;
-  height: 200px;
+  height: 230px;
   align-items: flex-end;
   padding-top: 10px;
-  /* position: relative; */
 }
 
 .yaxis_labels {
   height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .yaxis_labels ul {
@@ -30,74 +30,103 @@
   align-items: flex-end;
   flex-direction: column;
   justify-content: space-between;
-  height: 100%;
+  height: 200px;
+  padding-right: 6px;
 }
 
 .yaxis_labels ul li {
-  border-bottom: 1px dotted #4e4e4e;
-  flex: 1;
+  height: 100%;
   display: flex;
-  /* align-items: flex-end; */
 }
-.yaxis_labels ul li:first-child {
-  border-top: 1px dotted #4e4e4e;
+.yaxis_labels ul li p {
+  position: relative;
+  font-size: 0.8em;
+  top: -0.4em;
+  opacity: 0.7;
 }
+
 .yaxis_labels ul li:last-child {
-  flex: 0;
   height: 0;
-  /* font-size: 0; */
 }
 
 .chart_container {
   position: relative;
-  background-color: rgb(23, 23, 23);
   display: flex;
-  align-items: flex-end;
   width: 100%;
   height: 100%;
-  /* border: 1px solid gray; */
   overflow: hidden;
 }
 
 .bars {
-  /* background-color: rgba(0, 255, 0, 0.264); */
+  height: 200px;
+  /* min-width:100%; */
   display: flex;
   gap: 2px;
   position: relative;
   left: 0px;
+  background-color: #171717;
 }
 
 .bars li {
+  height: 100%;
   width: 6px;
-  /* height: 160px; */
-  background-color: #ffb30098;
-  border-radius: 1px 1px 0 0;
-  align-self: flex-end;
+  background-color: #1d1d1d;
+  display: flex;
+  align-items: flex-end;
 }
 .bars li:hover {
+  background-color: #333333;
+}
+.bars li:hover div {
   background-color: #ffb300;
 }
-
-.bars li.dimmed {
-  opacity: 0.5;
+.bars li div.bar {
+  border-radius: 1px 1px 0 0;
+  width: 100%;
+  background-color: #ffb30098;
+  pointer-events: none;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+}
+.time_pointers{
+  position: absolute;
+  left:-2px;
+  bottom:-4px;
+  height:4px;
+  border-left:2px solid #4e4e4e;
+}
+.time {
+  position: absolute;
+  bottom:-1.6em;
+  /* left:-0.4em; */
+  font-size: 0.8em;
+  /* top: -0.4em; */
+  opacity: 0.7;
+  user-select: none;
+  /* top: -1.2em;
+  font-size: 0.7em;
+  background-color: var(--background);
+  padding: 1px 4px;
+  border-radius: 4px;
+  white-space: nowrap; */
 }
 
-/* .bars li:nth-child(4n){
-  margin-right: 2px;
-} */
+.bars li.dimmed div {
+  background-color: #ffb30057;
+}
 
 .lines {
   position: absolute;
   width: 100%;
-  height: 100%;
-  /* background-color: blueviolet; */
+  height: 200px;
   top: 0;
   left: 0;
-
   display: flex;
   flex-direction: column;
-  /* border:1px solid red; */
   pointer-events: none;
+  /* background-color: #171717; */
 }
 
 .lines li {
