--- a/src/components/ChartTypeBar.module.css
+++ b/src/components/ChartTypeBar.module.css
@@ -57,6 +57,15 @@
   overflow: hidden;
 }
 
+.chart_back_layer{
+  position: absolute;
+  left:0;
+  top:0;
+  width:100%;
+  height:200px;
+  background-color: #171717;
+}
+
 .bars {
   height: 200px;
   display: flex;
@@ -99,9 +108,25 @@
 .time {
   position: absolute;
   bottom:-1.6em;
+  left:0;
   font-size: 0.8em;
   opacity: 0.7;
   user-select: none;
+  user-select: none;
+}
+.day{
+  position: absolute;
+  bottom:-3.4em;
+  left:0;
+  font-size: 0.8em;
+  opacity: 0.7;
+  user-select: none;
+  white-space: nowrap;
+  user-select: none;
+  width: calc(576px + 95*2px);
+  border-top-width: 2px;
+  border-top-style: solid;
+  padding-top: 2px;
 }
 
 .bars li.dimmed div {
@@ -150,4 +175,15 @@ gap:6px;
   background-color: aliceblue;
   color: #1d1d1d;
   
+}
+
+.chart_placeholder{
+  width:100%;
+  height:200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #171717;
+  cursor: auto;
 }
