--- a/src/components/ChartTypeBar.module.css
+++ b/src/components/ChartTypeBar.module.css
@@ -92,11 +92,13 @@
   /* left: 10px; */
   padding: 4px;
   display: none;
+  white-space: nowrap;
 }
 .bars li:hover > .info{
   display: block;
   border-radius: 2px;
   background-color: rgb(81, 0, 128);
+  
 }
 .bars li:hover div {
   background-color: #ffb300;
